@@ -53,13 +53,20 @@ a.size() = 10
 a.set_size(a.size()+3, true); a = [0 1 1 0 1 1 0 0 0 0 0 0 0]
 a.set_size(a.size()-6, true); a = [0 1 1 0 1 1 0]
 a(5) = 1
+a.get(5) = 1
 a(0,5) = [0 1 1 0 1 1]
+a.get(0,5) = [0 1 1 0 1 1]
 a(6,-1) = [0 0 0 0]
+idx_list = [0 5 6 7]
+a(idx_list) = [0 1 0 0]
+a.get(idx_list) = [0 1 0 0]
+bin_list = [1 0 0 0 0 1 1 1 0 0]
+a(bin_list) = [0 1 0 0]
+a.get(bin_list) = [0 1 0 0]
 a.right(3) = [0 0 0]
 a.left(4) = [0 1 1 0]
 a.mid(3,2) = [0 1]
 a.split(4) = [0 1 1 0];   a = [1 1 0 0 0 0]
-a("0 5 6 7") = [0 1 0 0]
 a(5) = a(6); a = [1 1 0 0 0 0]
 a.shift_left(c,2) = [1 0 1 1 0 0 0 0 1 1]
 a.shift_right(c) = [1 0 1 1 0 1 1 0 0 0]
@@ -147,13 +154,20 @@ a.size() = 10
 a.set_size(a.size()+3, true); a = [4 2 9 6 9 6 5 6 2 3 0 0 0]
 a.set_size(a.size()-6, true); a = [4 2 9 6 9 6 5]
 a(5) = 6
+a.get(5) = 6
 a(0,5) = [4 2 9 6 9 6]
+a.get(0,5) = [4 2 9 6 9 6]
 a(6,-1) = [5 6 2 3]
+idx_list = [0 5 6 7]
+a(idx_list) = [4 6 5 6]
+a.get(idx_list) = [4 6 5 6]
+bin_list = [1 0 0 0 0 1 1 1 0 0]
+a(bin_list) = [4 6 5 6]
+a.get(bin_list) = [4 6 5 6]
 a.right(3) = [6 2 3]
 a.left(4) = [4 2 9 6]
 a.mid(3,2) = [6 9]
 a.split(4) = [4 2 9 6];   a = [9 6 5 6 2 3]
-a("0 5 6 7") = [4 6 5 6]
 a(5) = a(6); a = [9 6 5 6 2 5]
 a.shift_left(c,2) = [9 6 9 6 5 6 2 3 5 5]
 a.shift_right(c) = [5 4 2 9 6 9 6 5 6 2]
@@ -241,13 +255,20 @@ a.size() = 10
 a.set_size(a.size()+3, true); a = [0.2078 0.2889 0.0832 0.1281 0.5474 0.0823 0.2921 0.8916 0.2271 0.4318 0.0000 0.0000 0.0000]
 a.set_size(a.size()-6, true); a = [0.2078 0.2889 0.0832 0.1281 0.5474 0.0823 0.2921]
 a(5) = 0.0823
+a.get(5) = 0.0823
 a(0,5) = [0.2078 0.2889 0.0832 0.1281 0.5474 0.0823]
+a.get(0,5) = [0.2078 0.2889 0.0832 0.1281 0.5474 0.0823]
 a(6,-1) = [0.2921 0.8916 0.2271 0.4318]
+idx_list = [0 5 6 7]
+a(idx_list) = [0.2078 0.0823 0.2921 0.8916]
+a.get(idx_list) = [0.2078 0.0823 0.2921 0.8916]
+bin_list = [1 0 0 0 0 1 1 1 0 0]
+a(bin_list) = [0.2078 0.0823 0.2921 0.8916]
+a.get(bin_list) = [0.2078 0.0823 0.2921 0.8916]
 a.right(3) = [0.8916 0.2271 0.4318]
 a.left(4) = [0.2078 0.2889 0.0832 0.1281]
 a.mid(3,2) = [0.1281 0.5474]
 a.split(4) = [0.2078 0.2889 0.0832 0.1281];   a = [0.5474 0.0823 0.2921 0.8916 0.2271 0.4318]
-a("0 5 6 7") = [0.2078 0.0823 0.2921 0.8916]
 a(5) = a(6); a = [0.5474 0.0823 0.2921 0.8916 0.2271 0.2921]
 a.shift_left(c,2) = [0.0832 0.1281 0.5474 0.0823 0.2921 0.8916 0.2271 0.4318 0.7408 0.7408]
 a.shift_right(c) = [0.7408 0.2078 0.2889 0.0832 0.1281 0.5474 0.0823 0.2921 0.8916 0.2271]
@@ -335,13 +356,20 @@ a.size() = 10
 a.set_size(a.size()+3, true); a = [-0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i 0.2146-0.1613i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i 0.0713-0.1312i 1.2300+1.0870i 0.0000+0.0000i 0.0000+0.0000i 0.0000+0.0000i]
 a.set_size(a.size()-6, true); a = [-0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i 0.2146-0.1613i 0.5573-0.6673i -0.8023+0.7836i]
 a(5) = 0.5573-0.6673i
+a.get(5) = 0.5573-0.6673i
 a(0,5) = [-0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i 0.2146-0.1613i 0.5573-0.6673i]
+a.get(0,5) = [-0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i 0.2146-0.1613i 0.5573-0.6673i]
 a(6,-1) = [-0.8023+0.7836i -0.8702+1.1201i 0.0713-0.1312i 1.2300+1.0870i]
+idx_list = [0 5 6 7]
+a(idx_list) = [-0.3968+0.1098i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i]
+a.get(idx_list) = [-0.3968+0.1098i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i]
+bin_list = [1 0 0 0 0 1 1 1 0 0]
+a(bin_list) = [-0.3968+0.1098i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i]
+a.get(bin_list) = [-0.3968+0.1098i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i]
 a.right(3) = [-0.8702+1.1201i 0.0713-0.1312i 1.2300+1.0870i]
 a.left(4) = [-0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i]
 a.mid(3,2) = [-0.7256+0.0559i 0.2146-0.1613i]
 a.split(4) = [-0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i];   a = [0.2146-0.1613i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i 0.0713-0.1312i 1.2300+1.0870i]
-a("0 5 6 7") = [-0.3968+0.1098i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i]
 a(5) = a(6); a = [0.2146-0.1613i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i 0.0713-0.1312i -0.8023+0.7836i]
 a.shift_left(c,2) = [-1.1627+0.9996i -0.7256+0.0559i 0.2146-0.1613i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i 0.0713-0.1312i 1.2300+1.0870i 0.5613-0.7500i 0.5613-0.7500i]
 a.shift_right(c) = [0.5613-0.7500i -0.3968+0.1098i 0.7432-0.4435i -1.1627+0.9996i -0.7256+0.0559i 0.2146-0.1613i 0.5573-0.6673i -0.8023+0.7836i -0.8702+1.1201i 0.0713-0.1312i]
